Fix font-size for codes on mobiles

--- a/stylesheets/base.sass
+++ b/stylesheets/base.sass
@@ -99,12 +99,13 @@ main
     margin-bottom: 2rem
     padding: 1rem
     background-color: #333
+    font-size: 0.8rem
     color: #fff
     line-height: 1.5
     overflow: auto
 
   code
-    font-family: Consolas, "Osaka-Mono", monospace
+    font-family: Consolas, "Osaka-Mono", Menlo, Courier, monospace
 
 .post-footer
   text-align: center
