--- a/stylesheets/large.sass
+++ b/stylesheets/large.sass
@@ -7,3 +7,7 @@
     margin: 2rem auto
     padding: 0 2rem
     border: 1px solid #333
+
+  .post-content
+    pre
+      font-size: 1rem
